re PR tree-optimization/83086 (valgrind error in gimple-ssa-store-merging.c for recent build)

PR tree-optimization/83086
	* gimple-ssa-store-merging.c
	(imm_store_chain_info::try_coalesce_bswap): Test this_n.base_addr
	rather than n.base_addr.

From-SVN: r255002